# aura-clinical-analytics

./: Dockerfile  Dockerfile.api  Dockerfile.consumer  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-api.txt  requirements-consumer.txt  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
design/: ci_diagram.md  class_diagram.md  entity_relationship_diagram.md  llm_summarization_flow.md  real_time_risk_prediction_flow.md
grafana/provisioning/dashboards/: aura_dashboard.json  dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
notebooks/: sample_data.csv  train_model.py
src/aura/: main.py
src/aura/messaging/: producer.py
src/aura/simulation/: simulator.py
src/aura_api/: main.py
src/aura_consumer/: main.py
tests/: test_model.py  test_predictor.py  test_summarizer.py
